<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>advbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lol@todo.todo">lol</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sounddevice</depend>.xml for ab
  <depend>std_msgs</depend>
  <exec_depend>pyaudio</exec_depend> 
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pocketsphinx</exec_depend> 

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</pacdA\